--- a/app/globals.css
+++ b/app/globals.css
@@ -779,7 +779,7 @@ nav {
 .login-wrap {
   width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(90deg, #ffb01e, rgba(208, 139, 10, 0.827));
+  /* background-image: linear-gradient(90deg, #ffb01e, rgba(208, 139, 10, 0.827)); */
   background-size: cover;
   display: flex;
   justify-content: center;
