--- a/app/globals.css
+++ b/app/globals.css
@@ -779,7 +779,8 @@ nav {
 .login-wrap {
   width: 100vw;
   height: 100vh;
-  /* background-image: linear-gradient(90deg, #ffb01e, rgba(208, 139, 10, 0.827)); */
+  background-image: linear-gradient(90deg, rgb(255, 255, 255), #ededed);
+  /* background-image: url("/assets/images/login-screen.jpg"); */
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -790,7 +791,7 @@ nav {
   background: #fff;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #efefef;
+  box-shadow: 3px 3px 5px #efefef;
 }
 .analisa-simulasi {
   width: 70vw;
